# ml-kernels

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/attention/: CMakeLists.txt  attention-example.cpp  attention_cpu.cpp  attention_cpu.h  attention_cuda.cu  attention_cuda.h
examples/bf16_gemm/: CMakeLists.txt  bf16-gemm-example.cpp  bf16_gemm_cpu.cpp  bf16_gemm_cpu.h  bf16_gemm_cuda.cu  bf16_gemm_cuda.h
examples/conv2d/: CMakeLists.txt  conv2d-example.cpp
examples/sgemm/: CMakeLists.txt  gemm.py  sgemm-example.cpp  sgemm_avx.h  sgemm_cpu.cpp  sgemm_cpu.h  sgemm_cuda.cu  sgemm_cuda.h
examples/softmax/: CMakeLists.txt  softmax-example.cpp  softmax_cpu.cpp  softmax_cpu.h  softmax_cuda.cu  softmax_cuda.h
include/avx/: operators.h
include/avx/operators/: gemm.h
include/cpu/: operators.h
include/cpu/operators/: gemm.h  transpose.h
include/cuda/: operators.h
include/cuda/operators/: gemm.h
include/luna_avx/: operators.h
include/luna_avx/operators/: gemm.h  transpose.h
include/luna_cpu/: operators.h
include/luna_cpu/functional/: conv2d.h
include/luna_cpu/operators/: gemm.h  im2col.h  transpose.h
include/mlkl/: mlkl.h
include/mlkl/avx/: operators.h
include/mlkl/avx/operators/: transpose.h
include/mlkl/core/: allocator.h  basic_math.h  tensor.h  tensor_math.h  tensor_ops.h
include/mlkl/cpu/: operators.h
include/mlkl/cpu/operators/: softmax.h
include/mlkl/cpu/utils/: matrix.h
include/mlkl/cuda/: operators.h
include/mlkl/cuda/device/: utils.h
include/mlkl/cuda/operators/: gemm.h  softmax.h
include/mlkl/operators/: operators.h
include/mlkl/operators/avx/: gemm.h  transpose.h
include/mlkl/operators/cpu/: attention.h  create.h  gemm.h  softmax.h  tensor.h  tensor_ops.h  transpose.h
include/mlkl/operators/cuda/: attention.h  bf16_gemm.h  create.h  gemm.h  softmax.h  tensor.h  tensor_ops.h
include/mlkl/tensor/: create.h  math.h  tensor.h
include/mlkl/utils/: device.h
python/: autotuner.py  coalescing.py
src/avx/operators/: gemm.cpp  transpose.cpp
src/core/: basic_math.cpp  tensor.cpp  tensor_math.cpp  tensor_ops.cpp
src/cpu/operators/: gemm.cpp  softmax.cpp  transpose.cpp
src/cpu/utils/: matrix.cpp
src/cuda/operators/: gemm.cpp  gemm.cu  gemm.cuh  gemm.h
src/luna_avx/operators/: gemm.cpp  transpose.cpp
src/luna_cpu/functional/: conv2d.cpp
src/luna_cpu/operators/: gemm.cpp  im2col.cpp  transpose.cpp
src/operators/avx/: gemm.cpp  transpose.cpp
src/operators/cpu/: attention.cpp  gemm.cpp  softmax.cpp  tensor_ops.cpp  transpose.cpp
src/operators/cuda/: attention.cu  bf16_gemm.cu  gemm.cu  softmax.cu  tensor_ops.cpp
tests/: sgemm_test.cpp
tests/functional/: relu_test.cpp
